# sdk-playground

./: .env.example  .gitignore  README.md  ape-config.yaml  pyproject.toml  pytest.ini  requirements.txt  status.py
.github/: tests.yaml
.github/workflows/: tests.yaml
notebooks/: arbitrum_mainnet_fork.ipynb  arbitrum_sepolia_octo.ipynb  arbitrum_sepolia_octo_fork.ipynb  base_sepolia.ipynb  block_compare.ipynb  eth_sepolia.ipynb  eth_sepolia_fork.ipynb  fetch_stale_feeds.ipynb  test_gas_oracle.ipynb  trade.ipynb  write_prices.ipynb
notebooks/templates/: arbitrum_mainnet.ipynb  arbitrum_mainnet_fork.ipynb  arbitrum_sepolia.ipynb  arbitrum_sepolia_octo.ipynb  arbitrum_sepolia_octo_fork.ipynb  base_mainnet.ipynb  base_mainnet_fork.ipynb  base_sepolia.ipynb  base_sepolia_fork.ipynb  eth_sepolia.ipynb  eth_sepolia_fork.ipynb
scripts/: arb_fork.py  arb_sep_fork.py  arb_sep_prices.py  arb_sep_settings.py  base_fork.py  base_sep_fork.py  create_account.py  eth_sep_settings.py  fetch_account_debts.py
tests/: README.md
tests/arbitrum-mainnet-fork/: conftest.py  test_arb_mainnet_core.py  test_arb_mainnet_perps.py  test_arb_mainnet_spot.py  test_arb_mainnet_synthetix.py
tests/arbitrum-sepolia-fork/: conftest.py  test_arb_sepolia_core.py  test_arb_sepolia_oracles.py  test_arb_sepolia_perps.py  test_arb_sepolia_spot.py  test_arb_sepolia_synthetix.py
tests/arbitrum-sepolia-octo-fork/: conftest.py  test_arb_sepolia_octo_core.py  test_arb_sepolia_octo_perps.py  test_arb_sepolia_octo_spot.py  test_arb_sepolia_octo_synthetix.py
utils/: arb_helpers.py  chain_helpers.py
(+28 files in other folders)
