[project]
name = "sdk-playground"
version = "0.1.0"
description = "Tests, scripts, and notebooks utilizing the Synthetix python SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-ape==0.8.21",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "pyarrow>=18.1.0",
    "pytest>=8.3.3",
    "python-dotenv==1.0.1",
    "synthetix==0.1.22",
]
